codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__approval_modal_exec_no_reason.snap
---
source: tui2/src/chatwidget/tests.rs
assertion_line: 2161
expression: terminal.backend().vt100().screen().contents()
---


  Would you like to run the following command?

  $ echo hello world

› 1. Yes, proceed (y)
  2. Yes, and don't ask again for commands that start with `echo hello world` (p)
  3. No, and tell xcodex what to do differently (esc)

  Press enter to confirm, esc to cancel, or ctrl + y to copy command
