codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui2/src/chatwidget/tests.rs
expression: popup
---
  Save logs?

  The following files will be saved locally:
    • codex-feedback-<thread-id>.log

› 1. Yes  Save the current Codex session logs for troubleshooting.
  2. No

  Press enter to confirm or esc to go back
