codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__hooks_output.snap
---
source: tui2/src/chatwidget/tests.rs
expression: rendered
---
/hooks

Automation hooks run external programs on lifecycle events. Treat hook payloads/logs as potentially sensitive.

Quickstart:
  xcodex hooks init
  xcodex hooks install --list
  xcodex hooks install python
  xcodex hooks help
  xcodex hooks test --configured-only
  xcodex hooks list
  xcodex hooks paths

Config: CODEX_HOME/config.toml
Logs: CODEX_HOME/tmp/hooks/logs
Payloads: CODEX_HOME/tmp/hooks/payloads

Docs: docs/xcodex/hooks.md and docs/xcodex/hooks-gallery.md and docs/xcodex/hooks-sdks.md
