codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__mcp_retry_no_failed_servers.snap
---
source: tui2/src/chatwidget/tests.rs
expression: rendered_text
---
• No failed MCP servers to retry.
