codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__mcp_tools_output_tools_resources_templates.snap
---
source: tui2/src/chatwidget/tests.rs
expression: rendered_text
---
/mcp

🔌  MCP Tools

  • alpha
    • Status: enabled
    • Startup: Ready
    • Auth: Bearer token
    • Command: alpha-cmd
    • Tools: list
    • Resources: Alpha resource (file:///alpha.txt), alpha-other (file:///other.txt)
    • Resource templates: Alpha template (file:///{path})
